--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>КАЛЬКУЛЯТОР АРСЕНА</title>
 </head>
 <body id="body">
-    <H1>CALCULATOR</H1>
+    <H1>CALCULATOR2019</H1>
     <form action="">
         <input type="number"  id="input1"  value="1">
         <br>
